--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,15 @@
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+$color-white: #28b485;
+
 /* class selector instal of default header element */
 .header {
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
-      /* Direction of the gradient */ rgba(126, 213, 111, 0.8),
-      rgba(39, 180, 133, 0.8)
+      /* Direction of the gradient */ rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
     ),
     url(../images/hero.jpg); /* Specified 2 background-image properties. First gradient, then image */
   background-size: cover; /* Background will always fit within the element */
@@ -58,9 +63,9 @@
   animation-timing-function: ease-out; /* (???) Research this property more later */
 
   /*   
-  animation-delay: 1s;
-  animation-iteration-count: 3; 
-  */
+    animation-delay: 1s;
+    animation-iteration-count: 3; 
+    */
 }
 
 .heading-primary--sub {
