--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -12,17 +12,12 @@ html {
   // This is being set for the purpose of easy rem calculations throughout the application
   // Browser default size is 16px, but we want to set it to a percentage in case people with bad eyes have a different default
   // The percentage is 62.5% because it equates to 10px assuming the 16px default
+
+  // This defines what 1rem is
   font-size: 62.5%;
 }
 
 // Setting this is body because fonts will be inherited by child elements
 body {
-  font-family: 'Lato', sans-serif; // Setting font to Lato, but if it is not available, use basic sans-serif
-  font-weight: 400;
-  //   font-size: 1.6rem;
-  line-height: 1.7; // 1.7x larger than the default
-  color: $color-grey-dark;
-  padding: 3rem;
-
   box-sizing: border-box; // This makes the box model not count borders/paddings in total height/width, and will extend to all children and their children because it is set to inherit in the * selecto
 }
