comment explaining partials nameing convention for sass

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,3 +1,5 @@
+// This file is a partial (it was named leading with a _) which tells Sass that this should not be generated into a CSS file, and instead included in one by importing
+
 // This is for the low level basics, such as resets and styles for html and body.
 
 *,
