--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -1,3 +1,4 @@
+// This file is a partial (it was named leading with a _) which tells Sass that this should not be generated into a CSS file, and instead included in one by importing
 @keyframes moveInLeft {
   0% {
     opacity: 0;
