--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,3 +1,5 @@
+// This file is a partial (it was named leading with a _) which tells Sass that this should not be generated into a CSS file, and instead included in one by importing
+
 body {
   font-family: 'Lato', sans-serif; // Setting font to Lato, but if it is not available, use basic sans-serif
   font-weight: 400;
