--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,3 +1,4 @@
+// This file is a partial (it was named leading with a _) which tells Sass that this should not be generated into a CSS file, and instead included in one by importing
 .btn {
   // link and visited are pseudo-classes, so we write the style for these specific states of the anchor element
   &:link,
