--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,3 +1,5 @@
+// This file is a partial (it was named leading with a _) which tells Sass that this should not be generated into a CSS file, and instead included in one by importing
+
 // class selector instal of default header element
 .header {
   height: 95vh;
