--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,8 +121,11 @@ body {
 .row {
   max-width: 114rem;
   background-color: #eee;
-  margin: 0 auto;
-  margin-bottom: 80px; }
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row .col-1-of-2 {
+    width: calc(); }
 
 .header {
   height: 95vh;
