--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,7 +125,10 @@ body {
   .row:not(:last-child) {
     margin-bottom: 8rem; }
   .row .col-1-of-2 {
-    width: calc(); }
+    width: calc( (100% - 6rem) / 2);
+    background-color: orangered; }
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
 
 .header {
   height: 95vh;
