--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -21,5 +21,11 @@
       (100% - #{$gutter-horizontal}) / 2
     ); // We take 100% of the width and minus the gutters on the sides, then divide by 2 because it is a 1 of 2 row, meaning 2 halves
     // The #{} wrapping the Sass variable is just neccesary syntax to work within CSS functions like calc()
+
+    background-color: orangered;
+
+    &:not(:last-child) {
+      margin-right: $gutter-horizontal;
+    }
   }
 }
