not:last-child to have a margin right so that all columns have space between them except the last which would make the grid look off center

--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -25,6 +25,7 @@
     background-color: orangered;
 
     &:not(:last-child) {
+      // So that the last column does not have extra white space making the grid look off center
       margin-right: $gutter-horizontal;
     }
   }
