utilized clearfix mixin in the rows so that each column can float without their heights collapsing to 0px

--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -14,6 +14,9 @@
     margin-bottom: $gutter-vertical;
   }
 
+  // Clearfix is required on the rows because all the child elements are being floated, so their heights would collapse to 0px and they will all appear on top of each other
+  @include clearfix();
+
   .col-1-of-2 {
     // Use built in CSS function calc() because it can mix units (rem & %) since it is calculated during the Visual Formatting Model phase since it is at that point that all units have been calculated as px (so in reality your are calculating px and not actually mixing units)
     // Sass cannot do this because it compiles prior to tha above mention phase, when final sizes are not known in px
@@ -23,6 +26,8 @@
     // The #{} wrapping the Sass variable is just neccesary syntax to work within CSS functions like calc()
 
     background-color: orangered;
+
+    float: left;
 
     &:not(:last-child) {
       // So that the last column does not have extra white space making the grid look off center
