--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,6 +134,18 @@ body {
     float: left; }
     .row .col-1-of-2:not(:last-child) {
       margin-right: 6rem; }
+  .row .col-1-of-3 {
+    width: calc((100% - (6rem * 2)) / 3);
+    background-color: orangered;
+    float: left; }
+    .row .col-1-of-3:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-2-of-3 {
+    width: calc(100% - (6rem) / 0.15);
+    background-color: orangered;
+    float: left; }
+    .row .col-2-of-3:not(:last-child) {
+      margin-right: 6rem; }
 
 .header {
   height: 95vh;
