--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,6 +143,8 @@ body {
     width: calc((100% - (6rem * 3)) / 4); }
   .row .col-2-of-4 {
     width: calc( (((100% - (6rem * 3)) / 4) * 2) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc( (((100% - (6rem * 3)) / 4) * 3) + (6rem * 2)); }
 
 .header {
   height: 95vh;
