custom grid system complete

--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -28,6 +28,8 @@
     }
   }
 
+  // This entire grid system is based on calculations which are based on sass variables, meaning it is easily changeable, as we can edit the gutters and the colums will adapt to that by getting smaller or larger to always fit the vertical space
+
   .col-1-of-2 {
     // Use built in CSS function calc() because it can mix units (rem & %) since it is calculated during the Visual Formatting Model phase since it is at that point that all units have been calculated as px (so in reality your are calculating px and not actually mixing units)
     // Sass cannot do this because it compiles prior to tha above mention phase, when final sizes are not known in px
