created a mixin to apply a gradient effect on text and applied it to the heading secondary

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -10,3 +10,10 @@
     clear: both;
   }
 }
+
+// This mixin takes in arguments and will result in text with a gradient coloring
+@mixin text-gradient($direction, $colorOne, $colorTwo) {
+  background-image: linear-gradient($direction, $colorOne, $colorTwo);
+  -webkit-background-clip: text;
+  color: transparent;
+}
