--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,7 +77,11 @@ body {
 
 .heading-secondary {
   font-size: 3.5rem;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  display: inline-block;
+  background-image: linear-gradient(45deg, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
