--- a/src/css/style.css
+++ b/src/css/style.css
@@ -82,6 +82,11 @@ body {
   background-image: linear-gradient(45deg, #7ed56f, #28b485);
   -webkit-background-clip: text;
   color: transparent; }
+  .heading-secondary:hover {
+    transform: skewY(0.5deg) skewX(2deg) scale(1.05); }
+
+.u-center-text {
+  text-align: center; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
