created styles for tertiary headings and paragraphs that may go with them

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -56,3 +56,17 @@ body {
     transform: skewY(0.5deg) skewX(2deg) scale(1.05);
   }
 }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
