--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -4,27 +4,12 @@
   text-align: center;
 }
 
-.u-margin-bottom-1 {
-  margin-bottom: 1rem;
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem;
 }
-.u-margin-bottom-2 {
-  margin-bottom: 2rem;
-}
-.u-margin-bottom-3 {
-  margin-bottom: 3rem;
-}
-.u-margin-bottom-4 {
+.u-margin-bottom-medium {
   margin-bottom: 4rem;
 }
-.u-margin-bottom-5 {
-  margin-bottom: 5rem;
-}
-.u-margin-bottom-6 {
-  margin-bottom: 6rem;
-}
-.u-margin-bottom-7 {
-  margin-bottom: 7rem;
-}
-.u-margin-bottom-8 {
+.u-margin-bottom-large {
   margin-bottom: 8rem;
 }
